fix: 🐛 keyboard shortcut

--- a/packages/components/Flatlist/components/parent.html
+++ b/packages/components/Flatlist/components/parent.html
@@ -1,4 +1,4 @@
-<div ref:element on:click>
+<div ref:element on:click shortcut={key + 1}>
   <svelte:component this="{renderItem}" key={key} {...data} bind:isActive />
 </div>
 
