--- a/packages/components/Flatlist/example/Example.html
+++ b/packages/components/Flatlist/example/Example.html
@@ -1,4 +1,3 @@
-{#if sectionList.length > 0}
 <Flatlist
   dataSection={sectionList}
   renderItem={Line}
@@ -6,7 +5,6 @@
   on:itemSelected="itemSelected(event)"
   itemHandler={this}
 />
-{/if}
 
 <script>
 import Line from './Line.html';
@@ -35,10 +33,10 @@ export default {
     getSectionList() {
       const section = [
         {
-          title: 'Dispositivo',
+          title: 'Disks',
           data: [
             {
-              label: 'Item 1',
+              label: 'Disk 1',
               shortcut: 1,
               onSelected: (item) => {
                 /*
@@ -49,7 +47,7 @@ export default {
               },
             },
             {
-              label: 'Item 2',
+              label: 'Disk 2',
               shortcut: 2,
               /*
               * Wrong! Using `this` without a function wrapper or referencing doesn't work,
@@ -58,30 +56,40 @@ export default {
               onSelected: this.itemClickHandler(),
             },
             {
-              label: 'Item 3',
+              label: 'Disk 3',
               shortcut: 3,
               /*
               * Just referencing a function, `itemHandler` will have effect. The `this` will be this script
               */
               onSelected: this.itemClickHandler,
             },
+          ],
+        },
+        {
+          title: 'Devices',
+          data: [
             {
-              label: 'Item 4',
+              label: 'Device 1',
               shortcut: 4,
+            },
+            {
+              label: 'Device 2',
+              shortcut: 5,
+              onSelected: this.itemClickHandler,
             },
           ],
         },
       ];
       return section;
     },
-    itemClickHandler({ index, data } = {}) {
-      console.log(`Row ${index}`, data);
+    itemClickHandler({ index, sectionIndex, position, data } = {}) {
+      console.log(`Row ${sectionIndex}-${index},`, `position: ${position}`, data);
     },
-    itemSelected({ index, data }) {
-      console.log(`itemSelected ${index}`, data);
+    itemSelected({ index, sectionIndex, position, data }) {
+      console.log(`itemSelected ${sectionIndex}-${index},`, `position: ${position}`, data);
     },
-    itemActive({ index, data }) {
-      console.log(`itemActive ${index}`, data);
+    itemActive({ index, sectionIndex, position, data }) {
+      console.log(`itemActive ${sectionIndex}-${index},`, `position: ${position}`, data);
     },
   },
 };
