--- a/packages/components/Flatlist/components/parent.html
+++ b/packages/components/Flatlist/components/parent.html
@@ -1,12 +1,19 @@
 <div
   ref:element
   on:click="fire('_click', { data, index: key, sectionIndex, position })"
-  shortcut={data.shortcut || -1}>
+  shortcut={useAutoShortcuts ? _shortcut : data.shortcut || undefined}>
   <svelte:component this="{renderItem}" key={key} {...data} bind:isActive />
 </div>
 
 <script>
   export default {
+    computed: {
+      _shortcut({ key }) {
+        if(key > 9) return undefined;
+        if(key === 9) return 0;
+        return key + 1;
+      },
+    },
     data() {
       return {
         key: undefined,
@@ -14,7 +21,8 @@
         data: {},
       };
     },
-    oncreate(){
+    oncreate() {
+      console.log(this.get().useAutoShortcuts);
       this.fire('create');
     }
   };
