--- a/packages/components/Flatlist/Flatlist.html
+++ b/packages/components/Flatlist/Flatlist.html
@@ -53,11 +53,6 @@
       Keystroke: '@mamba/app/Keystroke.html',
 
     },
-    computed: {
-      useAutoShortcuts({ dataSection, data, autoShortcuts }) {
-        return autoShortcuts === true && dataSection && dataSection.length === 1;
-      },
-    },
     data() {
       return {
         intersectSelectedEvents: false,
@@ -74,6 +69,11 @@
         _elementsRefs: [],
       };
     },
+    computed: {
+      useAutoShortcuts({ dataSection, data, autoShortcuts }) {
+        return autoShortcuts === true && dataSection && dataSection.length === 1;
+      },
+    },
     onupdate({changed, current}) {
       if(changed.data && current.data && current.data.length > 0) {
 
@@ -83,9 +83,9 @@
             _elementsRefs: [],
             dataSection: [{
               title: null,
-              data: current.data
-            }]
-          })
+              data: current.data,
+            }],
+          });
         }
 
       }
