feat: 🎸 {wip} DefaultRow and Decorators

--- a/packages/components/Flatlist/Flatlist.html
+++ b/packages/components/Flatlist/Flatlist.html
@@ -22,6 +22,7 @@
             sectionIndex={sectionIndex}
             renderItem={renderItem}
             useAutoShortcuts={useAutoShortcuts}
+            decorator={decorator}
             on:_click="setSelected(event)"
           />
         {/each}
