--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -1,243 +1,129 @@
-<div class="row" style={_rowStyle}>
-  <div
-    ref:main
-    class="main"
-    style={_topStyle}
-    on:click="_handleClick({ event, href })"
-    >
-    <div
-      class="top"
-      class:has-right-sign="_hasRightSign"
-      class:has-left-sign="_slots.leftSign"
-    >
-      <div class="left-area">
-        {#if _slots.leftSign}
-          <div class="left-sign" ref:leftSign>
-            <slot name="left-sign"></slot>
-          </div>
-        {/if}
-        <div class="label">{label || leftLabel}</div>
+<div
+  class="mb-default-row{_className}"
+  class:mb-active="isActive"
+  style={wrapperStyle ? getStyles(wrapperStyle) : undefined}
+>
+
+  <!-- Start fixture -->
+  {#if startFixture}
+    <Fixture fixture={startFixture} />
+  {/if}
+
+  <!-- Main wrapper -->
+  <div class="mb-row-main">
+
+    <!-- Label wrapper -->
+    <div class="mb-row-label">
+
+      <!-- Label - always render -->
+      <div class="mb-label">
+        {_label.value || ''}
       </div>
-      <div class="right-area">
-        {#if rightLabel}
-          <div class="label" style={_rightLabelStyle}>
-            {rightLabel}
-          </div>
-        {/if}
-        {#if _hasRightSign}
-          <div class="right-sign" ref:rightSign>
-            {#if href}
-              <Icon symbol="chevron-right" width="10px" />
-            {:elseif _slots.rightSign}
-              <slot name="right-sign"></slot>
-            {:elseif _slots.controller}
-              <slot name="controller"></slot>
-            {/if}
-          </div>
-        {/if}
-      </div>
+
+      <!-- Label Description  -->
+      {#if _label.description}
+        <div class="mb-desc">
+          {_label.description}
+        </div>
+      {/if}
+
     </div>
-    {#if description || _slots.description}
-      <div class="description">
-        {#if _slots.description}
-          <slot name="description"></slot>
-        {:elseif description}
-          {description}
+
+    <!-- Right wrapper -->
+    {#if rightLabel}
+      <div class="mb-row-right">
+
+        <!-- Right Label -->
+        {#if rightLabel.value}
+          <div class="mb-label">
+            {rightLabel.value}
+          </div>
         {/if}
+
+        <!-- Right Description -->
+        {#if rightLabel.description}
+          <div class="mb-desc">
+            {rightLabel.description}
+          </div>
+        {/if}
+
       </div>
     {/if}
-  </div>
+    <!-- /Right wrapper -->
 
-  {#if showExtra && _slots.extra}
-    <div class="extra">
-      <slot name="extra"></slot>
-    </div>
+  </div>
+  <!-- /Main wrapper -->
+
+  <!-- End fixture -->
+  {#if endFixture}
+    <Fixture fixture={endFixture} />
   {/if}
+
 </div>
 
 <script>
-  /* istanbul ignore next */
-  function isChildOf(tgt, el) {
-    if (!tgt || tgt.nodeType !== 1) return false;
-    if (tgt && el !== tgt) return isChildOf(tgt.parentNode, el);
-    return true;
-  }
+  import { getStyles } from './helpers.js';
 
   export default {
     components: {
-      Icon: '@mamba/icon',
+      Fixture: './components/fixture.html',
     },
-    data() {
-      return {
-        label: '',
-        leftLabel: undefined,
-        rightLabel: undefined,
-        /** Boolean to display the extra content element */
-        showExtra: false,
-        /** Define a link to another page */
-        href: undefined,
-        /** Description below the row label */
-        description: undefined,
-        /** Optional style */
-        bgColor: undefined,
-        primaryColor: undefined,
-        secondaryColor: undefined,
-        /** Private */
-        _slots: {},
-      };
+    helpers: {
+      getStyles,
     },
     computed: {
-      _hasRightSign: ({ href, _slots }) =>
-        !!(href || _slots.rightSign || _slots.controller),
-      _rowStyle: ({ primaryColor }) =>
-        [primaryColor && `color: ${primaryColor}`].filter(Boolean).join(';'),
-      _rightLabelStyle: ({ secondaryColor }) =>
-        [secondaryColor && `color: ${secondaryColor}`].filter(Boolean).join(';'),
-      _topStyle: ({ bgColor }) =>
-        [bgColor && `background-color: ${bgColor}`].filter(Boolean).join(';'),
-    },
-    oncreate() {
-      const hasSlots = !!this.options.slots;
-      if (hasSlots) {
-        this.set({
-          _slots: {
-            extra: !!this.options.slots.extra,
-            description: !!this.options.slots.description,
-            controller: !!this.options.slots.controller,
-            leftSign: !!this.options.slots['left-sign'],
-            rightSign: !!this.options.slots['right-sign'],
-          },
-        });
-      }
+      _className({ className }) {
+        return typeof className === 'string' ? ` ${className}` : '';
+      },
 
-      /**
-       * TODO: Refactor to pass as prop when undefined props are not rendered on the element
-       */
-      if (this.options.data) {
-        const { shortcut } = this.options.data;
-
-        if (shortcut) {
-          this.refs.main.setAttribute('shortcut', shortcut);
-        }
-      }
-    },
-    onupdate({ changed, current }) {
-      if (changed.showExtra) {
-        this.fire(current.showExtra ? 'showExtra' : 'hideExtra');
-      }
-    },
-    methods: {
-      _handleClick({ event, href }) {
-        /** Fire the row's click event for listening parent components */
-        this.fire('click');
-
-        /** If clicked on a "link" row, push the page to the router */
-        if (href && this.root.router) {
-          return this.root.router.go(href);
-        }
-
-        const { _hasRightSign } = this.get();
-        /**
-         * If the row has a custom controller,
-         * let's see if it has a [data-trigger] element.
-         */
-        if (!_hasRightSign) return;
-
-        /** Prevent firing the event twice (because of event bubbling) */
-        const clickedRightSign = isChildOf(event.target, this.refs.rightSign);
-
-        if (clickedRightSign) return;
-
-        const triggerEl = this.refs.rightSign.querySelector('[data-trigger]');
-
-        /* istanbul ignore next */
-        if (!triggerEl) return;
-
-        /**
-         * We assume that the trigger is also
-         * the element method that triggers it (like click)
-         * */
-        triggerEl[triggerEl.dataset.trigger]();
+      _label({ label }) {
+        if(!label) return {};
+        return label;
       },
     },
   };
 </script>
 
-<style type="text/postcss">
-.row {
-  margin: 0;
-  background: #fff;
-  color: $row-primary-color;
-  border-bottom: 1px solid $row-border-color;
-}
+<style>
+  /* div {
+    outline: 1px solid red;
+  } */
 
-.row :global(.row):last-child {
-  border-bottom: none;
-}
-
-.main {
-  padding: $row-padding;
-  background: $row-bg-color;
-}
-
-.top {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  height: $row-top-height;
-}
-
-.left-area {
-  flex-grow: 1;
-}
-
-.label {
-  font-size: $row-font-size;
-  font-weight: 500;
-  word-wrap: break-word;
-  flex-grow: 1;
-
-  .left-area & {
-    .top.has-right-sign & {
-      max-width: 90%;
+  .mb {
+    &-active {
+      background-color: $neutral200;
     }
 
-    .top.has-left-sign & {
-      margin-left: 10px;
+    &-default-row {
+      color: $neutral700;
+      font-size: 14px;
+      font-weight: 500;
+      min-height: 48px;
+      padding: 15px 0;
+      border-bottom: 2px solid $neutral200;
+    }
+
+    &-default-row,
+    &-row-main {
+      display: flex;
+      flex-direction: row;
+      line-height: 1;
+    }
+
+    &-row-main {
+      flex: 1;
+      padding: 0 15px;
+      align-items: center;
+    }
+
+    &-label {
+      font-weight: 500;
+    }
+
+    &-desc {
+      margin-top: 8px;
+      font-size: 13px;
+      color: $neutral500;
     }
   }
-
-  .right-area & {
-    max-width: 110px;
-    color: $row-secondary-color;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-
-    .top.has-right-sign & {
-      margin-right: 8px;
-    }
-  }
-}
-
-.right-area,
-.left-area {
-  display: flex;
-  align-items: center;
-}
-
-.right-area {
-  justify-content: flex-end;
-}
-
-.description {
-  &,
-  & :global(*) {
-    color: $neutral500;
-    margin: 4px 0 0;
-    font-size: 12px;
-    line-height: 16px;
-  }
-}
 </style>
