--- a/packages/components/Flatlist/components/parent.html
+++ b/packages/components/Flatlist/components/parent.html
@@ -2,7 +2,7 @@
   ref:element
   on:click="fire('_click', { data, index: key, sectionIndex, position })"
   shortcut={useAutoShortcuts ? _shortcut : data.shortcut || undefined}>
-  <svelte:component this="{renderItem}" key={key} {...data} bind:isActive />
+  <svelte:component this="{renderItem}" key={key} {...data} {..._decorator} bind:isActive />
 </div>
 
 <script>
@@ -15,6 +15,10 @@
       };
     },
     computed: {
+      _decorator({ decorator }) {
+        if(!decorator) return {};
+        return decorator;
+      },
       _shortcut({ key }) {
         if(key > 9) return undefined;
         if(key === 9) return 0;
