refactor: 💡 example with decoratorOverrides

--- a/packages/components/Flatlist/example/Example.html
+++ b/packages/components/Flatlist/example/Example.html
@@ -9,6 +9,14 @@
   decorator={GetDefaultDecorator}
 />
 
+<!-- To Override default decorator props, you can pass a `decoratorOverrides` object  -->
+<!--
+  decorator={GetDefaultDecorator}
+  decoratorOverrides={{
+    prefix: null
+  }}
+ -->
+
 <h5>Custom</h5>
 <FlatList
   dataSection={sectionList}
